finally fix alignment

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -229,7 +229,7 @@ header.masthead h2 {
   text-align: center;
   padding-bottom: 0;
   position: relative;
-  display: table;
+  display: inline-flex;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url(../img/title.jpg);
   background-position: center center;
   background-repeat: no-repeat;
